Fixed the visibility of dashes for screen readers

--- a/src/components/MenuPosts/MenuPosts.module.css
+++ b/src/components/MenuPosts/MenuPosts.module.css
@@ -68,6 +68,10 @@
   transition: 0.3s;
 }
 
+.dash {
+  margin: 0 var(--size-6);
+}
+
 .noPosts {
   margin: var(--size-20);
   text-align: center;
